@@ -28,6 +28,42 @@ import|;
 end_import
 
 begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|assertTrue
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|DataRow
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|QueryResult
+import|;
+end_import
+
+begin_import
 import|import
 name|org
 operator|.
@@ -278,6 +314,124 @@ argument_list|)
 operator|.
 name|trim
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|test_ExecuteSelect
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|int
+name|inserted
+init|=
+name|SQLExec
+operator|.
+name|query
+argument_list|(
+literal|"INSERT INTO ARTIST (ARTIST_ID, ARTIST_NAME) VALUES (1, 'a')"
+argument_list|)
+operator|.
+name|update
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|inserted
+argument_list|)
+expr_stmt|;
+name|QueryResult
+name|result
+init|=
+name|SQLExec
+operator|.
+name|query
+argument_list|(
+literal|"SELECT * FROM ARTIST"
+argument_list|)
+operator|.
+name|execute
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|result
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|result
+operator|.
+name|isList
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|result
+operator|.
+name|firstList
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|DataRow
+name|row
+init|=
+operator|(
+name|DataRow
+operator|)
+name|result
+operator|.
+name|firstList
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1L
+argument_list|,
+name|row
+operator|.
+name|get
+argument_list|(
+literal|"ARTIST_ID"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"a"
+argument_list|,
+name|row
+operator|.
+name|get
+argument_list|(
+literal|"ARTIST_NAME"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
